Fix sidebar-inner overflow

--- a/source/css/_schemes/Pisces/_sidebar.styl
+++ b/source/css/_schemes/Pisces/_sidebar.styl
@@ -16,6 +16,7 @@
   box-sizing: border-box;
   color: var(--text-color);
   margin-top: $sidebar-offset;
+  max-height: 'calc(100vh - %s)' % unit($sidebar-offset * 2, 'px');
 
   if (hexo-config('motion.enable') and hexo-config('motion.transition.sidebar')) {
     visibility: hidden;
